--- a/src/index.css
+++ b/src/index.css
@@ -94,8 +94,8 @@ body {
 }
 
 body.dark-theme {
-  --body-color: hsl(250, 28%, 12%);
-  --container-color: hsl(250, 28%, 12%);
+  --body-color: hsl(0, 0%, 4%);
+  /* --container-color: hsl(250, 28%, 12%); */
 
   --fainter-col: hsl(0, 0%, 15%);
 
@@ -104,7 +104,7 @@ body.dark-theme {
   --white-col: #000000;
   --black-col: #ffffff;
 
-  --footer-col: hsl(250, 28%, 19%);
+  --footer-col: hsl(263, 92%, 10%);
 
   --h1-col: hsl(250, 8%, 95%);
 
