--- a/src/sections/About/about.scss
+++ b/src/sections/About/about.scss
@@ -2,6 +2,7 @@
   min-height: calc(100vh - var(--header-height));
   padding-bottom: 30px;
   border-bottom: 1px solid var(--fainter-col);
+
   .content {
     display: flex;
     flex-direction: column;
@@ -10,19 +11,20 @@
     .mid {
       text-align: center;
       height: 105%;
+
       .img {
         min-height: 355px;
+
         img {
           animation: moving2 1s infinite alternate;
-
           transform: translateY(0px);
           height: 350px;
         }
       }
     }
+
     .bottom {
       padding: 0px 10px;
-
       display: flex;
       align-items: center;
       justify-content: space-around;
@@ -31,14 +33,29 @@
         display: flex;
         flex-direction: column;
         gap: 25px;
-        #desc{
+
+        #desc {
           font-size: var(--p-font-size);
-          
           font-family: var(--para2-font);
           text-align: justify;
           color: var(--black-col);
+
+          .box {
+            display: flex;
+            flex-direction: row;
+            background-color: #1c053b; /* Light grey background */
+            border: 1px solid #ddd; /* Border with light grey color */
+            border-radius: 8px; /* Rounded corners */
+            padding: 20px; /* Spacing inside the box */
+            margin-bottom: 20px; /* Space between boxes */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
+            font-size: 16px;
+            line-height: 1.5;
+            
+          }
         }
       }
+
       .count {
         justify-content: space-around;
 
@@ -48,14 +65,15 @@
           ul {
             display: flex;
             gap: 50px;
-            i{
-              color: var(--black-col);
 
+            i {
+              color: var(--black-col);
             }
-            
+
             #uil-instagram-alt:hover {
               -webkit-text-fill-color: var(--prim-btn-col);
             }
+
             .uil2:hover {
               color: var(--prim-btn-col);
             }
@@ -66,6 +84,7 @@
           .num {
             text-align: center;
           }
+
           .desc {
             text-align: center;
           }
@@ -78,13 +97,7 @@
 @keyframes moving2 {
   0% { transform: translateY(0); }
   100% { transform: translateY(-1px); }
-
-
 }
-
-
-
-
 
 @media screen and (max-width: 768px) {
   .About {
@@ -92,12 +105,13 @@
 
     .content {
       gap: 10px;
-      
+
       .mid {
         .img {
-           min-height: 200px;
+          min-height: 200px;
+
           img {
-            height:200px;
+            height: 200px;
           }
         }
       }
@@ -110,17 +124,24 @@
           h1 {
             font-size: var(--media-h0-font-size);
           }
+
           .desc {
             font-size: var(--media-p-font-size);
           }
         }
+
         .details {
           gap: 20px;
-          #desc{
+
+          #desc {
             font-size: var(--media-small-font-size);
-            
-            
+
+            .box {
+              font-size: var(--media-small-font-size);
+              padding: 15px;
+            }
           }
+
           .top {
             p {
               font-size: var(--media-p-font-size);
@@ -132,15 +153,12 @@
   }
 }
 
-
 @media screen and (max-width: 430px) {
   .About {
     height: fit-content;
-    
 
     .content {
       gap: 10px;
-     
 
       .bottom {
         .count {
@@ -150,25 +168,12 @@
           h1 {
             font-size: var(--media-h1-font-size);
           }
+
           .desc {
             font-size: var(--media-p-font-size);
           }
         }
-        
       }
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
