--- a/src/sections/Home/home.scss
+++ b/src/sections/Home/home.scss
@@ -103,6 +103,7 @@
       gap: 5px;
       flex-direction: column-reverse;
       justify-content: space-around;
+   
       .left {
         flex: 0.8;
 
@@ -128,6 +129,10 @@
 
           .desc {
             font-size: var(--media-p-font-size);
+            height: auto;
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
           }
         }
 
@@ -166,84 +171,74 @@
 }
 
 @media screen and (max-width: 470px) {
-  .Home {
-    height: calc(100vh - var(--header-height));
-    // height: fit-content;
-    width: 100%;
-    position: relative;
-
-    .content {
-      flex-direction: column-reverse;
-      gap: 0px;
-
-      .left {
-        padding: 0px 5px;
-        // margin-top: auto;
-        height: 100%;
-        gap: 20px;
-        .bottom {
-          margin-top: auto;
-          
-        }
-      }
-      .left .bottom .social .buttons {
-        display: none; /* Hide the social buttons */
-      }
-      .details{
-        overflow: auto;
-        gap: 20px; /* Increased gap for smaller screens */
-        padding: 10px; /* Add padding for better spacing */
-  }
-
-      
-      .details .head{
-        height: 60px;
-      
-        overflow: hidden;
-        line-height: 100%;
-      }
-      .details .position{
-        height: 60px;
-        overflow: hidden;
-        line-height: 100%;
-      }
-
-      .details .desc{
-        display: block;
-        max-height: fit-content;
-      }
-      .details .social{
-        overflow: hidden;
-        line-height: 100%;
-        display:none;
-        
-      }
-      .details .buttons{
-        padding-bottom: 100px;
-        height:5px;
-        display: none;
-
-      }
-      .bottom {
-        overflow-y: auto;
-        display: none;
-      }
-      .buttons{
-        display: none;
-      }
-      .right {
-        flex: none;
-        align-items: center;
-        justify-content: center;
-
-        .profile-img {
-          min-height: 255px;
-          img {
-            width: 100%;
-            height:200px;
-          }
-        }
-      }
-    }
+  .details .social{
+    display: block;
+    visibility: visible;
   }
 }
+//   .Home {
+//     height: calc(100vh - var(--header-height));
+//     // height: fit-content;
+//     width: 100%;
+//     position: relative;
+
+//     .content {
+//       flex-direction: column-reverse;
+//       gap: 0px;
+
+//       .left {
+//         padding: 0px 5px;
+//         // margin-top: auto;
+//         height: 100%;
+//         gap: 20px;
+//         .bottom {
+//           margin-top: auto;
+          
+//         }
+//       }
+//       .left .bottom .social .buttons {
+//         display: none; /* Hide the social buttons */
+//       }
+//       .details{
+//         overflow: auto;
+//         gap: 20px; /* Increased gap for smaller screens */
+//         padding: 10px; /* Add padding for better spacing */
+//   }
+
+      
+//       .details .head{
+//         height: 60px;
+      
+//         overflow: hidden;
+//         line-height: 100%;
+//       }
+//       .details .position{
+//         height: 60px;
+//         overflow: hidden;
+//         line-height: 100%;
+//       }
+
+//       .details .desc{
+//         display: block;
+//         max-height: fit-content;
+//       }
+
+//       .details .bottom .social{
+//         display: none;
+//       }
+//       .right {
+//         flex: none;
+//         align-items: center;
+//         justify-content: center;
+
+//         .profile-img {
+//           min-height: 255px;
+//           img {
+//             width: 100%;
+//             height:200px;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
