--- a/src/components/skill/skill.scss
+++ b/src/components/skill/skill.scss
@@ -32,6 +32,10 @@
         grid-row: 2;
         grid-column: 2/3;
       }
+      .points {
+        grid-row: 2;
+        grid-column: 2/3;
+      }
 
       .angle {
         display: flex;
